--- a/components/Input/styles.module.css
+++ b/components/Input/styles.module.css
@@ -1,5 +1,5 @@
 .input {
-  @apply shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-48 h-12 sm:text-sm border-gray-300 rounded-md mb-4 px-4 mt-1;
+  @apply shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-48 h-12 sm:text-sm border-gray-300 rounded-md mb-4 px-4 mt-1 w-full sm:w-44;
 }
 
 .label {
